[package]
name = "p3-blake3"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-symmetric = "0.1.3-succinct" 
blake3 = "1.5"

[features]
neon = ["blake3/neon"]
parallel = ["blake3/rayon"]
