[package]
name = "p3-bn254-fr"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.3-succinct" 
p3-poseidon2 = "0.1.3-succinct"
p3-symmetric = "0.1.3-succinct" 

ff = { version = "0.13", features = ["derive", "derive_bits"] }
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[[bench]]
name = "bench_field"
harness = false
