[package]
name = "p3-commit"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
test-utils = ["dep:p3-dft"]

[dependencies]
p3-challenger = "0.1.2-succinct" 
p3-field = "0.1.2-succinct" 
p3-matrix = "0.1.2-succinct" 
p3-util =  "0.1.2-succinct" 

itertools = "0.12.0"
serde = { version = "1.0", default-features = false }

# for testing
p3-dft = { version = "0.1.2-succinct", optional = true }

