[package]
name = "p3-dft"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.3-succinct" 
p3-matrix = "0.1.3-succinct" 
p3-maybe-rayon = "0.1.3-succinct" 
p3-util =  "0.1.3-succinct" 
tracing = "0.1.37"

[[bench]]
name = "fft"
harness = false
