[package]
name = "p3-fri"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-challenger = "0.1.3-succinct" 
p3-commit = "0.1.3-succinct"
p3-dft = "0.1.3-succinct"
p3-field = "0.1.3-succinct" 
p3-interpolation = "0.1.3-succinct"
p3-matrix = "0.1.3-succinct" 
p3-maybe-rayon = "0.1.3-succinct" 
p3-util =  "0.1.3-succinct" 
itertools = "0.12.0"
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[[bench]]
name = "fold_even_odd"
harness = false
