[package]
name = "p3-goldilocks"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.3-succinct" 
p3-dft = "0.1.3-succinct"
p3-mds = "0.1.3-succinct"
p3-symmetric = "0.1.3-succinct" 
p3-util =  "0.1.3-succinct" 
p3-poseidon2 = "0.1.3-succinct"
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
