[package]
name = "p3-keccak-air"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-util =  "0.1.2-succinct" 
p3-field = "0.1.2-succinct" 
p3-matrix = "0.1.2-succinct" 
p3-maybe-rayon = "0.1.2-succinct" 
p3-air = "0.1.2-succinct"
tracing = "0.1.37"

tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[features]
# TODO: Consider removing, at least when this gets split off into another repository.
# We should be able to enable p3-maybe-rayon/parallel directly; this just doesn't
# seem to work when using cargo with the -p or --package option.
parallel = ["p3-maybe-rayon/parallel"]
