[package]
name = "p3-keccak-air"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-util =  "0.1.3-succinct" 
p3-field = "0.1.3-succinct" 
p3-matrix = "0.1.3-succinct" 
p3-maybe-rayon = "0.1.3-succinct" 
p3-air = "0.1.3-succinct"
tracing = "0.1.37"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-challenger = { path = "../challenger" }
p3-circle = { path = "../circle" }
p3-commit = { path = "../commit" }
p3-dft = { path = "../dft" }
p3-fri = { path = "../fri" }
p3-goldilocks = { path = "../goldilocks" }
p3-keccak = { path = "../keccak" }
p3-mds = { path = "../mds" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-poseidon = {path = "../poseidon"}
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }
p3-uni-stark = { path = "../uni-stark" }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[features]
# TODO: Consider removing, at least when this gets split off into another repository.
# We should be able to enable p3-maybe-rayon/parallel directly; this just doesn't
# seem to work when using cargo with the -p or --package option.
parallel = ["p3-maybe-rayon/parallel"]
