[package]
name = "p3-matrix"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.3-succinct" 
p3-maybe-rayon = "0.1.3-succinct" 
p3-util =  "0.1.3-succinct" 
itertools = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"

[[bench]]
name = "transpose_benchmark"
path = "benches/transpose_benchmark.rs"
harness = false
