[package]
name = "p3-mds"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-dft = "0.1.3-succinct"
p3-field = "0.1.3-succinct" 
p3-matrix = "0.1.3-succinct" 
p3-symmetric = "0.1.3-succinct" 
p3-util =  "0.1.3-succinct" 
rand = { version = "0.8.5", features = ["min_const_gen"] }
itertools = "0.12.0"

[[bench]]
name = "mds"
harness = false
