[package]
name = "p3-merkle-tree"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.2-succinct" 
p3-matrix = "0.1.2-succinct" 
p3-maybe-rayon = "0.1.2-succinct" 
p3-symmetric = "0.1.2-succinct" 
p3-commit = "0.1.2-succinct"
p3-util =  "0.1.2-succinct" 
itertools = "0.12.0"
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[[bench]]
name = "merkle_tree"
harness = false
