[package]
name = "p3-monolith"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
generic-array = "1.0"
p3-field = "0.1.2-succinct" 
p3-goldilocks = "0.1.2-succinct"
p3-mersenne-31 = "0.1.2-succinct" 
p3-mds = "0.1.2-succinct"
p3-symmetric = "0.1.2-succinct" 
sha3 = "0.10"

[[bench]]
name = "permute"
harness = false
