[package]
name = "p3-monolith"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
generic-array = "1.0"
p3-field = "0.1.3-succinct" 
p3-goldilocks = "0.1.3-succinct"
p3-mersenne-31 = "0.1.3-succinct" 
p3-mds = "0.1.3-succinct"
p3-symmetric = "0.1.3-succinct" 
sha3 = "0.10"

[[bench]]
name = "permute"
harness = false
