[package]
name = "p3-poseidon2"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gcd = "2.3.0"
p3-field = "0.1.2-succinct" 
p3-symmetric = "0.1.2-succinct" 
p3-mds = "0.1.2-succinct"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[[bench]]
name = "poseidon2"
harness = false
