[package]
name = "p3-poseidon2"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
gcd = "2.3.0"
p3-field = "0.1.3-succinct" 
p3-symmetric = "0.1.3-succinct" 
p3-mds = "0.1.3-succinct"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[[bench]]
name = "poseidon2"
harness = false
