[package]
name = "p3-rescue"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gcd = "2.3.0"
itertools = "0.12.0"
modinverse = "0.1.1"
num = "0.4.0"
num-integer = "0.1.45"
p3-field = "0.1.2-succinct" 
p3-mds = "0.1.2-succinct"
p3-symmetric = "0.1.2-succinct" 
p3-util =  "0.1.2-succinct" 
rand = "0.8.5"
sha3 = "0.10.8"

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
criterion = "0.5.1"

[[bench]]
name = "rescue"
harness = false
