[package]
name = "p3-symmetric"
version = "0.1.3-succinct"
edition = "2021"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = "0.1.3-succinct" 
itertools = "0.12.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
