[package]
name = "p3-uni-stark"
version = "0.1.2-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-util =  "0.1.2-succinct" 
p3-field = "0.1.2-succinct" 
p3-challenger = "0.1.2-succinct" 
p3-commit = "0.1.2-succinct"
p3-dft = "0.1.2-succinct"
p3-matrix = "0.1.2-succinct" 
p3-maybe-rayon = "0.1.2-succinct" 
p3-air = "0.1.2-succinct"
itertools = "0.12.0"
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
